--- a/Views/CreateAndChangeUser.axaml
+++ b/Views/CreateAndChangeUser.axaml
@@ -26,7 +26,7 @@
 			</ComboBox.ItemTemplate>
 		</ComboBox>
 		
-		<Button Content="Сохранить"
+		<Button Content="Save"
               Margin="10" Grid.Row="9" HorizontalAlignment="Right" Click="Button_Click"/>
 	</Grid>
 </Window>
