--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,22 +1,25 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:AvaloniaProject1pw.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="AvaloniaProject1pw.Views.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
         Title="AvaloniaProject1pw">
 	<Grid RowDefinitions="*, Auto" ColumnDefinitions="*, Auto">
-		<DataGrid ItemsSource="{Binding Users}" IsReadOnly="True" DoubleTapped="DataGrid_DoubleTapped" Name="MainDataGridUsers" Grid.Row="0">
+		
+		<DataGrid ItemsSource="{Binding Logins}" IsReadOnly="True" DoubleTapped="DataGrid_DoubleTapped" Name="MainDataGridUsers" Grid.Row="0">
 			<DataGrid.Columns>
-				<DataGridTextColumn Header="Full Name" Binding="{Binding FullName}"/>
-				<DataGridTextColumn Header="Phone Number" Binding="{Binding PhoneNumber}"/>
-				<DataGridTextColumn Header="Desctiption" Binding="{Binding Description}"/>
+				<DataGridTextColumn Header="Full Name" Binding="{Binding Users.FullName}"/>
+				<DataGridTextColumn Header="Phone Number" Binding="{Binding Users.PhoneNumber}"/>
+				<DataGridTextColumn Header="Desctiption" Binding="{Binding Users.Description}"/>
+				<DataGridTextColumn Header="Login" Binding="{Binding Login1}"/>
+				<DataGridTextColumn Header="Password" Binding="{Binding Password}"/>
 			</DataGrid.Columns>
 		</DataGrid>
+		
 		<Button Content="Add" Grid.Row="1" Click="Button_Click"/>
 		<Button Content="Login" Grid.Row="1" Grid.Column="5" Click="Button_Click_1"/>
+		<Button Content="Del" Grid.Row="1" Grid.Column="1" Click="Button_Click_2"/>
 	</Grid>
 </Window>
