--- a/Views/CreateAndChangeUser.axaml
+++ b/Views/CreateAndChangeUser.axaml
@@ -18,13 +18,7 @@
 		<TextBox Grid.Row="6" Name="DescriptionText" Grid.RowSpan="2" TextWrapping="Wrap" MaxLength="100"/>
 		
 		<TextBlock Text="Пользователь:" Grid.Row="0" Grid.Column="1" Margin="10 0"/>
-		<ComboBox ItemsSource="{Binding Users}" Width="200" Grid.Row="2" Grid.Column="1" Name="ComboUsers" Margin="10 0">
-			<ComboBox.ItemTemplate>
-				<DataTemplate>
-					<TextBlock Text="{Binding FullName}" FontWeight="Bold"/>
-				</DataTemplate>
-			</ComboBox.ItemTemplate>
-		</ComboBox>
+		<TextBox Grid.Row="1" Grid.Column="1" Name="UserText"/>
 		
 		<TextBlock Text="Пароль" Grid.Row="3" Grid.Column="1" Margin="10 0"/>
 		<TextBox Grid.Row="4" Name="PasswordText" Grid.Column="1" Margin="10 0"/>
