--- a/Views/CreateAndChangeBasket.axaml
+++ b/Views/CreateAndChangeBasket.axaml
@@ -2,11 +2,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:data="clr-namespace:TestSqlGilmi.Data"
+        xmlns:data="clr-namespace:AvaloniaProject1pw.Data"
         mc:Ignorable="d"
         d:DesignWidth="600"
         d:DesignHeight="400"
-        x:Class="TestSqlGilmi.CreateAndChangeBasket"
+        x:Class="AvaloniaProject1pw.CreateAndChangeBasket"
         Title="Create Basket">
 
 	<Grid ColumnDefinitions="*,*" RowDefinitions="Auto,Auto,Auto,Auto,*,Auto" Margin="10" >
