--- a/Views/ItemUserControl.axaml
+++ b/Views/ItemUserControl.axaml
@@ -3,24 +3,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaProject1pw.Basket">
+             x:Class="AvaloniaProject1pw.Item">
+			xmlns:vm="using:AvaloniaProject1pw.ViewModels"
+			x:DataType="vm:MainWindowViewModel">
 	<Grid RowDefinitions="*,Auto" ColumnDefinitions="*">
 		<DataGrid Grid.Row="0"
-                 ItemsSource="{Binding Baskets}"
+                 ItemsSource="{Binding Items}"
                  IsReadOnly="True"
                  DoubleTapped="DataGrid_DoubleTapped"
-                 Name="MainDataGridBaskets"
+                 Name="MainDataGridItems"
                  AutoGenerateColumns="False">
 			<DataGrid.Columns>
-				<DataGridTextColumn Header="ID Basket" Binding="{Binding IdBasket}" Width="100"/>
-				<DataGridTextColumn Header="User ID" Binding="{Binding UserId}" Width="100"/>
-				<DataGridTextColumn Header="Item ID" Binding="{Binding ItemsId}" Width="100"/>
-				<DataGridTextColumn Header="Counter" Binding="{Binding Counter}" Width="100"/>
+				<DataGridTextColumn Header="ID" Binding="{Binding IdItem}" Width="80"/>
+				<DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="150"/>
+				<DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="100"/>
+				<DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="200"/>
 			</DataGrid.Columns>
 		</DataGrid>
 
 		<StackPanel Grid.Row="1" HorizontalAlignment="Left" Orientation="Horizontal" Margin="10" Spacing="10">
-			<Button Content="Add" Click="Button_Click"/>
+			<Button Content="Добавить" Click="Button_Click"/>
 		</StackPanel>
 	</Grid>
 </UserControl>
