--- a/Views/BasketUserControl.axaml
+++ b/Views/BasketUserControl.axaml
@@ -3,9 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaProject1pw.Basket">
-	xmlns:vm="using:AvaloniaProject1pw.ViewModels"
-	x:DataType="vm:MainWindowViewModel">
+             x:Class="AvaloniaProject1pw.Basket"
+			xmlns:vm="using:AvaloniaProject1pw.ViewModels"
+			x:DataType="vm:MainWindowViewModel">
 	<Grid RowDefinitions="*,Auto" ColumnDefinitions="*">
 		<DataGrid Grid.Row="0"
                  ItemsSource="{Binding Baskets}"
