--- a/Views/UsersUserControl.axaml
+++ b/Views/UsersUserControl.axaml
@@ -3,9 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="AvaloniaProject1pw.Users">
-	        xmlns:vm="using:AvaloniaProject1pw.ViewModels"
-	        x:DataType="vm:MainWindowViewModel">
+			 xmlns:vm="using:AvaloniaProject1pw.ViewModels"
+             x:Class="AvaloniaProject1pw.Users"
+			x:DataType="vm:MainWindowViewModel">
 	<Grid RowDefinitions="*,Auto"
 	  ColumnDefinitions="*">
 
@@ -30,5 +30,5 @@
 		<Button Content="Добавить" Click="Button_Click"/>
 	</StackPanel>
 
-</Grid>
+	</Grid>
 </UserControl>
