--- a/Views/CreateAndChangeBasket.axaml
+++ b/Views/CreateAndChangeBasket.axaml
@@ -23,7 +23,7 @@
 		<ComboBox Grid.Row="3" Grid.Column="0" Name="ItemComboBox" Margin="0,0,0,10">
 			<ComboBox.ItemTemplate>
 				<DataTemplate DataType="data:Item">
-					<TextBlock Text="{Binding Name}"/>
+					<TextBlock Text="{Binding NameItem}"/>
 				</DataTemplate>
 			</ComboBox.ItemTemplate>
 		</ComboBox>
