--- a/Views/ItemUserControl.axaml
+++ b/Views/ItemUserControl.axaml
@@ -15,7 +15,7 @@
                  AutoGenerateColumns="False">
 			<DataGrid.Columns>
 				<DataGridTextColumn Header="ID" Binding="{Binding IdItem}" Width="80"/>
-				<DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="150"/>
+				<DataGridTextColumn Header="Name" Binding="{Binding NameItem}" Width="150"/>
 				<DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="100"/>
 				<DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="200"/>
 			</DataGrid.Columns>
